fixed vertical scrollbar and wrong content krista in textreply page

--- a/src/app/pages/Intro/Phone/Phone.scss
+++ b/src/app/pages/Intro/Phone/Phone.scss
@@ -175,13 +175,16 @@
     }
     .redwest-btn-one{
       margin-right: 2.5px;
+      width: 33%;
     }
     .redwest-btn-two{
       margin-left: 2.5px;
       margin-right: 2.5px;
+      width: 33%;
     }
     .redwest-btn-three{
       margin-left: 2.5px;
+      width: 33%;
     }
     .btn-call-container{
       margin-top: 30px;
