--- a/src/app/pages/Intro/VoiceMail/VoiceMail.scss
+++ b/src/app/pages/Intro/VoiceMail/VoiceMail.scss
@@ -66,9 +66,9 @@
   .voiceplay{
     background-color:rgb(48, 132, 132);
   }
-  .voicemail-box-container div:nth-child(13){
-    border-bottom: 3px solid black;
-  }
+  //.voicemail-box-container.box-container div:last-child{
+  //  border-bottom: 3px solid black;
+  //}
   .new-voice-mail-container{
     height: 70px;
     border-top: 3px solid black;
