--- a/src/app/pages/Screen/Components/Buttons/Mail/Mail.scss
+++ b/src/app/pages/Screen/Components/Buttons/Mail/Mail.scss
@@ -85,6 +85,16 @@
   }
 
 }
+@media (max-width: 575.98px) {
+  #mail-button {
+    .button-2 {
+      height: 55px;
+      width: 55px;
+    }
+  }
+}
+
+
 
 @media (max-width: 320px) and (orientation: portrait) {
   #mail-button {
