--- a/src/app/pages/Screen/Components/Buttons/Phone/Phone.scss
+++ b/src/app/pages/Screen/Components/Buttons/Phone/Phone.scss
@@ -23,6 +23,15 @@
     //border: 4px solid rgba(16, 16, 16, 0.75);
   }
 }
+@media (max-width: 575.98px) {
+  #phone-button{
+    .button-3{
+      height: 85px;
+      width: 85px;
+    }
+  }
+}
+
 @media (max-width: 320px) and (orientation: portrait) {
   #phone-button{
     .button-3{
